# dispond

./: .env  .gitignore  LICENSE  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
.docs/: missions.md  vehicles.md
.docs/api/data/: dispatch.md
.docs/files/: mission.md  vehicle.md
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/data/misc/: names.json
src-tauri/data/missions/fire/: fire_a.json  fire_b.json  fire_c.json  fire_d.json  fire_e.json
src-tauri/data/missions/tech/: tech_a.json  tech_b.json  tech_c.json
src-tauri/data/vehicles/engine/: engine_a.json  engine_b.json  engine_c.json  vehicle_hlf.json  vehicle_lf.json  vehicle_tlf.json
src-tauri/data/vehicles/hazard/: haz_a.json
src-tauri/data/vehicles/ladder/: ladder_a.json  vehicle_dlk.json
src-tauri/data/vehicles/tactical/: tactical_a.json  tactical_b.json  vehicle_elw.json  vehicle_kdow.json
src-tauri/data/vehicles/tech/: tech_a.json  vehicle_rw.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  presence.rs
src/app/: actions.ts  context.ts  emitter.ts  globals.css  indexed.ts  indexed_db.ts  layout.tsx  loading.css  loading.tsx  page.tsx  startup.ts  tests.ts
src/app/api/list/: route.ts
src/app/api/mission/: route.ts
src/app/game/: layout.tsx  page.tsx
src/app/game/buildings/: page.tsx
src/app/game/calls/: page.tsx
src/app/play/: layout.tsx  page.tsx
src/app/script/: app.ts  emitter.ts  setup.depreceated.ts  setup.ts  utils.ts
src/app/shared/: debug_menu.tsx
src/public/: names.json
(+108 files in other folders)
