[package]
name = "dispond"
version = "0.2.1"
description = "A Tauri App"
authors = ["Warrior Deere"]
license = ""
repository = "https://github.com/WarriorDeere/dispond"
default-run = "dispond"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
dirs = "5.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "fs-read-dir", "fs-write-file", "fs-exists", "fs-create-dir", "fs-read-file", "window-set-position", "window-show", "window-hide", "window-unmaximize", "window-unminimize", "window-start-dragging", "window-close", "window-minimize", "window-maximize"] }
discord-rpc-client = "0.4.0"
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
